(next release) on (date of next release)
14.06.00 VZ: RFC 2047 compliant header parsing for the non ASCII strings in
             headers
14.06.00 VZ: viewing messages in non-default charsets
11.06.00 KB: Filter rules editor shows program code and should check for
             consistency. Manual editing supported.
             Install Wizard fixes, better default values for servers. No more
             network autodetection for Unix.
10.06.00 VZ: dialog for editing the order of folder view columns
             sorting of folder view by any column on column click
10.06.00 KB: Finished OpenSSL dynamic loading
             Fixed next-unread-menu and some translations/keybindings
             Added score and colour support to filters
09.06.00 VZ: Added option to autolaunch the ext editor
08.06.00 KB: added OpenSSL dynamic loading
             improvements/streamlining of Profile code
             wxMessageView fixes, Mime detection improved
             wxComposeView profile inheritance fixed
06.06.00 VZ: added a "Folder" menu in the main frame, renamed "File" -> "Mail"
05.06.00 KB: added Identity redirection support to Profile classes
             added MLogCircle and error guessing to folder and network operations
04.06.00 KB: added configuration option for file folder format on creation
             added upgrade message about changed server settings
             Fixes and autoconf support for new wxMessageView code.
04.06.00 VZ: Windows version now has the same (decent) icons as Unix one
02.06.00 VZ: creating MH folders with the wizard finally works
             "d&d"ing messages to group or root folder won't delete them
02.06.00 VZ: improved highlighting in the folder tree
02.06.00 KB: authentification for SMTP and NNTP
30.05.00 KB: Split part of MessageView functionality into a separate class
             to be shared with ComposeView.
             Replaced several mail_check() calls with mail_ping() in
             MailFolderCC code.